update: remove quantity from listing product

--- a/src/app/views/company/company.component.html
+++ b/src/app/views/company/company.component.html
@@ -59,7 +59,7 @@
           <c-col [md]="4">
             <c-input-group>
               <span cInputGroupText class="x-label">
-                <label for="foundingDate">Founding Date</label>
+                <label for="foundingDate">Founded</label>
               </span>
               <input
                 [(ngModel)]="companyModel.foundingDateFormatted"
@@ -73,7 +73,7 @@
           <c-col [md]="4">
             <c-input-group>
               <span cInputGroupText class="x-label">
-                <label for="joinDate">Join Date</label>
+                <label for="joinDate">Joined</label>
               </span>
               <input
                 [(ngModel)]="companyModel.joinDateFormatted"
