--- a/src/app/views/listing/listing.component.scss
+++ b/src/app/views/listing/listing.component.scss
@@ -1,3 +1,11 @@
 .pointer {
   cursor: pointer;
 }
+
+.x-offcanvas-spinner-div {
+  height: 80vh;
+
+  .x-offcanvas-spinner {
+    margin: auto;
+  }
+}
